fix: Focus indicator clipping text of links

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -573,6 +573,7 @@ a {
   vertical-align: baseline;
 
   outline-width: 0;
+  outline-offset: 2px;
 
   @include my.on-event {
     text-decoration: underline;
